<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_map">

    <fragment
        android:id="@+id/navigation_info"
        android:name="com.example.realtimeroadwarningapp.ui.fragments.info.InfoFragment"
        android:label="@string/title_info"
        tools:layout="@layout/fragment_info" />

    <fragment
        android:id="@+id/navigation_map"
        android:name="com.example.realtimeroadwarningapp.ui.fragments.map.MapsFragment"
        android:label="@string/title_map"
        tools:layout="@layout/fragment_maps" />


    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.example.realtimeroadwarningapp.ui.fragments.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />
</navigation>