<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@drawable/dialog_background"
    android:gravity="center" >

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:src="@drawable/ic_round_signal_wifi_off"/>

    <TextView
        android:text="@string/oops"
        android:textSize="40sp"
        android:textColor="@color/dark_blue"
        android:layout_gravity="center"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_network"
        android:textColor="@color/dark_blue"
        android:textSize="25sp"
        />

    <TextView
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_network_detail"
        android:textColor="@color/dark_blue"
        android:textSize="18sp"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_retry"
        android:layout_width="match_parent"
        android:layout_margin="50dp"
        android:text="@string/reconnect"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:backgroundTint="@color/dark_blue"
        android:background="@drawable/button_background_effect"
        android:layout_height="wrap_content" />

</LinearLayout>