<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="8dp"
    tools:context=".ui.activities.DrivingTypeActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/driving_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <ImageView
            android:id="@+id/iv_home"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/ic_home_background_effect"
            android:clickable="true"
            android:focusable="true"
            android:padding="8dp"
            android:src="@drawable/ic_round_arrow_back"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/driving_type"
            android:textColor="@color/blue"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/iv_home"
            app:layout_constraintStart_toEndOf="@id/iv_home"
            app:layout_constraintTop_toTopOf="@id/iv_home" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginTop="30dp"
        android:hint="@string/car_type"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/setting_category_round_background"
        android:orientation="vertical"
        android:padding="10dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_car"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/setting_item_background_effect"
            android:clickable="true"
            android:focusable="true"
            android:paddingHorizontal="10dp"
            android:paddingVertical="5dp">

            <ImageView
                android:id="@+id/iv_driving_type"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@drawable/ic_background"
                android:backgroundTint="@color/exodus_fruit"
                android:padding="5dp"
                android:src="@drawable/car_on"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/car"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@id/iv_driving_type"
                app:layout_constraintStart_toEndOf="@+id/iv_driving_type"
                app:layout_constraintTop_toTopOf="@id/iv_driving_type" />

            <RadioButton
                android:id="@+id/rb_car"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:clickable="false"
                android:theme="@style/RadioButtonStyle"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_scooter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/setting_item_background_effect"
            android:clickable="true"
            android:focusable="true"
            android:paddingHorizontal="10dp"
            android:paddingVertical="5dp">

            <ImageView
                android:id="@+id/iv_scooter"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@drawable/ic_background"
                android:backgroundTint="@color/joust_blue"
                android:padding="7dp"
                android:src="@drawable/scooter_on"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/scooter"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@id/iv_scooter"
                app:layout_constraintStart_toEndOf="@+id/iv_scooter"
                app:layout_constraintTop_toTopOf="@id/iv_scooter" />

            <RadioButton
                android:id="@+id/rb_scooter"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:clickable="false"
                android:theme="@style/RadioButtonStyle"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginTop="10dp"
        android:text="@string/driving_type_detail"
        android:textSize="16sp"/>
</LinearLayout>